--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SarcasmFont.xyz - Fluent in Sarcasm</title>
     <style>
+        @font-face {
+            font-family: 'SarcasmFont';
+            src: url('sarcasmfont.woff2') format('woff2'),
+                 url('sarcasmfont.woff') format('woff');
+            font-weight: normal;
+            font-style: normal;
+        }
         body {
             font-family: Arial, sans-serif;
             text-align: center;
@@ -13,7 +20,7 @@
         }
         .banner {
             position: fixed;
-            top: 20px;
+            top: 50px;
             right: -40px;
             background: red;
             color: white;
@@ -21,7 +28,7 @@
             font-size: 20px;
             font-weight: bold;
             transform: rotate(45deg);
-            font-family: 'SarcasmFont', sans-serif; /* Placeholder for sarcasm font */
+            font-family: 'SarcasmFont', sans-serif;
         }
         .container {
             background: white;
